#~----------------------------------------------------------------------------~#
#  @@@@@@@@  @@           @@@@@@   @@@@@@@@ @@
# /@@/////  /@@          @@////@@ @@////// /@@
# /@@       /@@  @@@@@  @@    // /@@       /@@
# /@@@@@@@  /@@ @@///@@/@@       /@@@@@@@@@/@@
# /@@////   /@@/@@@@@@@/@@       ////////@@/@@
# /@@       /@@/@@//// //@@    @@       /@@/@@
# /@@       @@@//@@@@@@ //@@@@@@  @@@@@@@@ /@@
# //       ///  //////   //////  ////////  // 
# 
# Copyright (c) 2016 Los Alamos National Laboratory, LLC
# All rights reserved
#~----------------------------------------------------------------------------~#

#------------------------------------------------------------------------------#
# Compile definition to include driver
#------------------------------------------------------------------------------#

#if(FLECSI_RUNTIME_MODEL STREQUAL "mpilegion")
#  set(CMAKE_CXX_COMPILER "mpiCC")
#
#  add_definitions(-DFLECSI_DRIVER=${CMAKE_SOURCE_DIR}/examples/agile/sprint1.h)
#
#  #----------------------------------------------------------------------------#
#  # Add a rule to build the executable
#  #----------------------------------------------------------------------------#
#
#  add_executable(sprint1 ${CMAKE_SOURCE_DIR}/driver/${FLECSI_RUNTIME_MAIN} )
#  set_target_properties(sprint1 PROPERTIES LINKER_LANGUAGE CXX)
#
#  #----------------------------------------------------------------------------#
#  # Add link dependencies
#  #----------------------------------------------------------------------------#
#
#  target_link_libraries(sprint1 ${FLECSI_RUNTIME_LIBRARIES})
#  
#endif()
#~---------------------------------------------------------------------------~-#
# Formatting options
# vim: set tabstop=2 shiftwidth=2 expandtab :
#~---------------------------------------------------------------------------~-#
